--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "An automated twitter bot, retweeting all things #saluki",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "prepare": "husky install"
   },
   "author": "Jordan McDougall",
   "license": "ISC",
   "dependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "dotenv": "^10.0.0",
     "twit": "^2.2.11"
+  },
+  "devDependencies": {
+    "husky": "^6.0.0"
   }
 }
